Changes for 1.6.2

 - [DEV-255] added support of #num for function last() (Sasha)
 - [ZBX-593] fixed stop escalations if action is disabled (Sasha)
 - [ZBX-592] fixed incorrect {TRIGGER.STATUS} value in recovery message (Sasha)
 - [DEV-250] added support of vm.memory.size under AIX (Sasha)
 - [DEV-250] added full support of proc.num/mem under Linux 2.4/2.6, Solaris and AIX (Sasha)
 - [ZBX-588] fixed undefined variable in trigger status page (Artem)
 - [ZBX-587] fixed LDAP test functionality (Artem)

Changes for 1.6.1

 - [ZBX-586] added simple check tcp_perf into help_items (Sasha)
 - [ZBX-585] added support of macros {HOSTNAME},{HOST.CONN},{IPADDRESS},{HOST.DNS} in item keys (Sasha)
 - [DEV-250] added support of vfs.dev.read/write under Linux 2.4/2.6 (Sasha)
 - [ZBX-576] added IPMI authentication algorithms (Sasha)
 - [ZBX-573] made SQL optimization for PGSQL (Artem)
 - [ZBX-572] fixed warning messages while updating template linkage (Sasha)
 - [ZBX-570] fixed possible server crash if flexible interval delay is 0 sec. (Sasha)
 - [ZBX-565] fixed filtering of conf->triggers (Artem)
 - [ZBX-562] fixed improper host group delete action (Artem)
 - [ZBX-527] fixed possible poller crash (Sasha)
 - [ZBX-533] fixed incorrect SNMP string to float conversion (Sasha)
 - [ZBX-534] fixed problem with email messages for discovery events (Sasha)
 - [ZBX-540] DM: fixed sql error while processing configuration data (Sasha)
 - [ZBX-557] fixed wrong audit action for items enable/disable (Artem)
 - [ZBX-403] added support of commas in UserParameter's (Sasha)
 - [ZBX-541] fixed overwriting proxies on host import issue (Artem)
 - [ZBX-542] added processing of nextcheck for active checks (Sasha)
 - [ZBX-504] fixed date selector issue for log items in latest values screen (Artem)
 - [ZBX-529] removed links from dynamic screen graphs (Artem)
 - [ZBX-538] fixed wrong theme pick up in login screen issue (Artem)
 - [ZBX-536] fixed problem with "Unable to add performance counter" (Sasha)